# brainfuck_jit

./: Cargo.toml  README.org
bf_assembly/: decrement_data_pointer.s  increment_data_pointer.s  input_byte.s  instruction_>.s  jump_if_zero.s  output_byte.s
src/: '  jit.rs  main.rs  parser.rs  parser_old.rs  tokenizer.rs
