[package]
name = "brainfuck_jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
iced-x86 = { version = "1.21.0", default-features = false, features = ["code_asm", "std", "decoder", "gas"]}
nix = { version = "0.26.4", features = ["mman"] }
